# RCD_TU_Delft_2023

./: .gitignore
src_hls/stream_hls/: .gitignore  colour_space.cpp  convolution.cpp  hfilt.cpp
src_hls/stream_hls/inframes/: frames.txt
src_hls/stream_hls/streamulator/: my.tcl  streamulator.cpp  streamulator.h
src_hls/stream_hls/streamulator/PYNQ-Z2/hls/: hfilt.cpp  invstripe.cpp
src_hls/stream_hls/streamulator/PYNQ-Z2/hls/inframes/: frames.txt
src_hls/stream_hls/streamulator/PYNQ-Z2/hls/streamulator/: axipng.cpp  axipng.h  spng.h  streamulator.h
src_hls/stream_hls/streamulator/PYNQ-Z2/overlay/boards/Pynq-Z2/base/base/base.ip_user_files/sim_scripts/base/xcelium/: CMakeLists.txt  README.txt  base.sh
src_hls/stream_hls/streamulator/RCD_HLS/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
src_hls/stream_hls/streamulator/RCD_HLS/.apc/: autopilot.apfmapping
src_hls/stream_hls/streamulator/RCD_HLS/solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json  vivado.jou
src_hls/stream_hls/streamulator/RCD_HLS/solution1/.autopilot/: .autopilot_exit
src_hls/stream_hls/streamulator/RCD_HLS/solution1/.autopilot/db/: .message_csim.xml  .message_syn.xml  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.g.lto.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.bc  all.directive.json  apatb_hfilt.cpp  apatb_hfilt_ir.bc  apatb_hfilt_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  clang.diag.xml  cmplx.3.016.fe.opt.json  (+48 more)
(+1686 files in other folders)
